2000-06-05  Pavel Cisler  <pavel@eazel.com>

	* libgnomevfs-corba/gnome-vfs-async-ops.c:
	(corba_gnome_vfs_async_xfer):
	* libgnomevfs-corba/gnome-vfs-slave-notify.c: (impl_Notify_reset):
	* libgnomevfs-corba/gnome-vfs-slave-process.c:
	* libgnomevfs-corba/gnome-vfs-slave-process.h:
	* libgnomevfs-corba/gnome-vfs-slave.c: (copy_metadata):
	* libgnomevfs-pthread/gnome-vfs-async-ops.c:
	(pthread_gnome_vfs_async_cancel):
	* libgnomevfs-pthread/gnome-vfs-job-slave.c:
	(gnome_vfs_job_slave_new):
	* libgnomevfs-pthread/gnome-vfs-job.c:
	* libgnomevfs-pthread/gnome-vfs-job.h:
	* libgnomevfs/gnome-vfs-configuration.c:
	* libgnomevfs/gnome-vfs-directory.c:
	* libgnomevfs/gnome-vfs-messages.h:
	* libgnomevfs/gnome-vfs-mime-handlers.c:
	(gnome_vfs_mime_get_default_component),
	(gnome_vfs_mime_get_short_list_components),
	(gnome_vfs_mime_get_all_applications),
	(gnome_vfs_mime_get_all_components),
	(gnome_vfs_mime_extend_all_applications),
	(gnome_vfs_mime_remove_from_all_applications), (join_str_list),
	(get_user_level):
	Added bug numbers to FIXMEs.
	

2000-06-05	Mathieu Lacage <mathieu@gnome.org>

	* libgnomevfs/Makefile.am: add OAF_CFLAGS to include
	so that oaf.h is picked up when oaf is not in GNOME prefix.
	* test/Makefile.am : idem.

2000-06-05  Darin Adler  <darin@eazel.com>

	* modules/http-method.c:
	* modules/newftp-method.c: (do_open_directory),
	(do_make_directory):
	* modules/pipe-method.c: (do_close):
	* test/gnome-file-selection/gicon.c: (get_stock_icon),
	(get_stock_overlay), (get_default_icon),
	(gicon_get_icon_for_file_2):
	* test/gnome-file-selection/gnome-file-selection-history.c:
	* test/gnome-file-selection/gnome-file-selection.c:
	(update_directory_combo_list), (setup_directory_combo_and_toolbar),
	(destroy), (class_init), (init):
	* test/test-info.c:
	Added bug numbers to FIXMEs.
	
	* mime-type-capplet/edit-window.c: (destruction_handler),
	(initialize_main_win), (launch_edit_window),
	(populate_application_menu):